--- a/index.html
+++ b/index.html
@@ -36,7 +36,6 @@
       <nav class="nav primary-nav">
         <a href="sites.html">Sites I have built/</a>
         <a href="teach.html">Teach Yourself How To Code/</a>
-        <a href="code.html">Reusable Code/</a>
         <a href="mailto:javascriptforlife@gmail.com">Email Me/</a>
       </nav>
     </ul>
@@ -45,8 +44,8 @@
 
     <h2>Dedicated To Creating Original Web Apps</h2>
 
-    <p>As a web developer, I want to show others some of the apps I have built, how they too can become a
-       web developer, and a place where they can find reusable code. Welcome to my site.
+    <p>As a web developer, I want to show others some of the apps I have built and how they too can become a
+       web developer. Welcome to my site.
     </p>
 
     <a class="btn btn-alt" href="mailto:javascriptforlife@gmail.com">Contact Me!</a>
@@ -84,8 +83,7 @@
           <h4>This website is not only for displaying some of my work, but to help others learn how
           to become a web developer.
           The first page is to give you links to apps I have built. The second page I've dedicated to giving you step by step instructions on how to become a web
-          developer. I've also dedicated another page for reusable javascript code. Contact me if you need any help
-          or any kind of direction. Not code help, but career guidance. ;)
+          developer. Contact me if you need any help or any kind of direction. Not code help, but career guidance. ;)
           </h4>
       </div>
     </section>
@@ -95,7 +93,6 @@
       <nav class="nav primary-nav">
         <a href="sites.html">Sites I have built/</a>
         <a href="teach.html">Teach Yourself How To Code/</a>
-        <a href="code.html">Reusable Code/</a>
         <a href="mailto:javascriptforlife@gmail.com">Email Me/</a>
       </nav>
     </footer>
