--- a/teach.html
+++ b/teach.html
@@ -26,7 +26,6 @@
       <nav class="nav primary-nav">
         <a href="index.html">Home/</a>
         <a href="sites.html">Sites I have built/</a>
-        <a href="code.html">Reusable Code/</a>
         <a href="mailto:javascriptforlife@gmail.com">Email Me/</a>
       </nav>
     </ul>
@@ -97,6 +96,30 @@
           <p>
 
           </p>
+      <h1>Node js</h1>
+          <p>
+
+          </p>
+      <h1>Mongo DB</h1>
+          <p>
+
+          </p>
+      <h1>Mongoose</h1>
+          <p>
+
+          </p>
+      <h1>Express</h1>
+          <p>
+
+          </p>
+      <h1>Angular 2.0</h1>
+          <p>
+
+          </p>
+      <h1>React</h1>
+          <p>
+
+          </p>
       </div>
       <h1 class="work">This Page Is A Work In Progress</h1>
     </section>
@@ -105,7 +128,6 @@
       <nav class="nav primary-nav">
         <a href="index.html">Home/ </a>
         <a href="sites.html">Sites I have built/ </a>
-        <a href="code.html">Reusable Code/</a>
         <a href="mailto:javascriptforlife@gmail.com"> Email Me/</a>
       </nav>
     </footer>
