--- a/teach.html
+++ b/teach.html
@@ -59,10 +59,10 @@
           </p>
           <h1> Start with Javascript</h1>
           <p> This is the absolutely most important step in your whole journey, one you will work on your entire career.
-            Start with a programming language before you learn HTML and CSS. Why?
-            Programming is a lot harder to learn than HTML and CSS. The sooner you get started the better. Also,
-            once you learn a language, it's a lot easier to learn other languages because a lot of them are the exact
-            same concepts just done differently. Coding is hard, it's not easy. Spend one to two hours a day.
+            Start with a object oriented programming language before you learn HTML and CSS. Why?
+            Learning an object oriented programming language is a lot harder to learn than HTML and CSS. The sooner you get started the better. Also,
+            once you learn a OOP language, it's a lot easier to learn other OOP languages because a lot of them are the exact
+            same concepts, just done differently with different syntax. Coding is hard, it's not easy. Spend one to two hours every day learning.
             You may hit a wall when you are first getting started, but know this: it will all make sense. It will also become
             a lot of fun. It's all about problem solving and becoming a better critical thinker. Well, where to start?
           </p>
@@ -93,9 +93,18 @@
                 Read the above article to start down the path of recursion.
               </p>
       <h1>HTML & CSS</h1>
-          <p>
-
-          </p>
+      <h2>-Sites To Learn HTML & CSS-</h2>
+        <ul>
+          <a href="https://www.codecademy.com/">CodeAcademy.com</a>
+            <p>Once again, CodeAcademy has a lot! You can do their HTML and CSS courses. Start here. It will get you
+               familiar with all of the basics.
+            </p>
+          <a href="https://learn.shayhowe.com/html-css/building-your-first-web-page/">Learn From Shay Howe</a>
+            <p>This is an extremely thorough run through on how to build an elegant website with HTML and
+               CSS. I highly suggest doing this after a CodeAcademy run through. It will take you to the next
+               level.
+            </p>
+        </ul>
       <h1>Node js</h1>
           <p>
 
