--- a/teach.html
+++ b/teach.html
@@ -105,6 +105,10 @@
                level.
             </p>
         </ul>
+      <h1>MEAN/MERN and more</h1>
+        <a href="http://info-mongodb-com.s3.amazonaws.com/_com_assets/collateral/modern_app_stack_ebook_rgb.pdf">Complete Guide To MEAN/MERN</a>
+          <p>This is an extremely thorough run through on the full MEAN/MERN tech stack. Pretty self explanatory. Great place to start.
+          </p>  
       <h1>Node js</h1>
           <p>
 
