--- a/teach.html
+++ b/teach.html
@@ -104,11 +104,19 @@
                CSS. I highly suggest doing this after a CodeAcademy run through. It will take you to the next
                level.
             </p>
+          <a href="https://learn.shayhowe.com/advanced-html-css/">Learn From Shay Howe Part 2</a>
+            <p>This is an advanced and extremely thorough run through on how to build an even more elegant website with HTML and
+               CSS, but adding jQuery, extending from the previous example.
+            </p>
         </ul>
+      <h1>jQuery</h1>
+          <p>
+
+          </p>
       <h1>MEAN/MERN and more</h1>
         <a href="http://info-mongodb-com.s3.amazonaws.com/_com_assets/collateral/modern_app_stack_ebook_rgb.pdf">Complete Guide To MEAN/MERN</a>
           <p>This is an extremely thorough run through on the full MEAN/MERN tech stack. Pretty self explanatory. Great place to start.
-          </p>  
+          </p>
       <h1>Node js</h1>
           <p>
 
