--- a/teach.html
+++ b/teach.html
@@ -93,6 +93,10 @@
                 Read the above article to start down the path of recursion.
               </p>
       <h1>HTML & CSS</h1>
+        <p> Hyper Text Markup Language (HTML) is like the bones, the physical framework for your website. It's the
+          text you are reading right now and how it is arranged. Cascading Style Sheets (CSS) is the styling of your website.
+          Changing how your text looks, how your images are presented, and the colors you see.
+        </p>
       <h2>-Sites To Learn HTML & CSS-</h2>
         <ul>
           <a href="https://www.codecademy.com/">CodeAcademy.com</a>
@@ -106,12 +110,13 @@
             </p>
           <a href="https://learn.shayhowe.com/advanced-html-css/">Learn From Shay Howe Part 2</a>
             <p>This is an advanced and extremely thorough run through on how to build an even more elegant website with HTML and
-               CSS, but adding jQuery, extending from the previous example.
+               CSS, but adding jQuery and more. Extended from the previous example.
             </p>
         </ul>
       <h1>jQuery</h1>
-          <p>
-
+        <a href="https://www.codecademy.com/">CodeAcademy.com</a>
+          <p>You've got it, CodeAcademy! They have a great jQuery series. I've done other sites jQuery series, like
+             codeschool.com, but they were hard to follow for me. Not as clear. CodeAcademy does a great job.
           </p>
       <h1>MEAN/MERN and more</h1>
         <a href="http://info-mongodb-com.s3.amazonaws.com/_com_assets/collateral/modern_app_stack_ebook_rgb.pdf">Complete Guide To MEAN/MERN</a>
