--- a/index.html
+++ b/index.html
@@ -60,7 +60,7 @@
           off not knowing which way to go. A lot of my friends were sysadmins, so I started
           studying Linux and Networking. Feeling discouraged because it wasn't creative enough for me,
           I decided to pursue a Computer Science degree. I attended SJSU, but their computer science program
-          is absolutely horrible. In my first Java programming class,
+          is absolutely horrid. In my first Java programming class,
           70% of the students dropped. Out of who was left, only a 1/3 passed from that 30%.
           There were four unseen teachers above
           our teacher, they dictated the homework and tests. The teacher that was "teaching" us
@@ -72,16 +72,16 @@
           were dropping. I decided to drop the CS degree and went on to finish my music degree,
           pursuing music tech.</h4> <br>
           <h4>However, I wasn't about to give up. I decided to teach myself by pursuing other non traditional routes.
-          Everything you need to know is on the web, but there is still a lot you won't learn teaching yourself.
+          Everything you need to know is on the web, but there is still a lot you won't learn by teaching yourself.
           Proper coding techniques, which technologies to learn, algorithms, which field to pursue, and more.
           In the end, I decided to combine classroom instruction with self instruction.
           So far, I have gone halfway through a CS degree, attended multiple bootcamp
-          preps (Hack Reactor and App Academy), worked through multiple coding websites, studied Linux, studied networking,
-          studied multiple languages, and then finally attended a coding bootcamp (General Assembly).
+          preps (Hack Reactor and App Academy), Hack Reactor SSP, worked through multiple coding websites, studied Linux/Unix,
+          Unix Shell scripting, Python, Ruby, Javascript, networking, and then finally attended a coding bootcamp (General Assembly).
           </h4> <br>
           <h2>What This Site Is About</h2>
           <h4>This website is not only for displaying some of my work, but to help others learn how
-          to become a web developer.
+          to become a full stack web developer.
           The first page is to give you links to apps I have built. The second page I've dedicated to giving you step by step instructions on how to become a web
           developer. Contact me if you need any help or any kind of direction. Not code help, but career guidance. ;)
           </h4>
