--- a/sites.html
+++ b/sites.html
@@ -60,7 +60,7 @@
           This app consists of Ruby on Rails, Ruby, Materialize, jQuery,
           HTML, CSS, and a lot of different gems. Gems such as bcrypt, geocoder,
           gmaps4rails, underscore, devise, and mailboxer. Deployed on Heroku and
-          connected to Google Domains.
+          connected to Google Domains. I am the sole creator and developer of this site.
         </h4>
         <h2><a href="https://serene-mesa-96151.herokuapp.com/ "> Vagabond</a></h2>
         <h4>
