--- a/teach.html
+++ b/teach.html
@@ -94,12 +94,13 @@
               </p>
       <h1>HTML & CSS</h1>
         <p> Hyper Text Markup Language (HTML) is like the bones, the physical framework for your website. It's the
-          text you are reading right now and how it is arranged. Cascading Style Sheets (CSS) is the styling of your website.
-          Changing how your text looks, how your images are presented, and the colors you see.
+          text you are reading right now and how it is arranged. It's how your whole website is arranged.
+          Cascading Style Sheets (CSS) is the styling of your website. Changing how your text looks,
+          how your images are presented, and the colors you see. CSS can also do more.
         </p>
-      <h2>-Sites To Learn HTML & CSS-</h2>
+      <h2>---Sites To Learn HTML & CSS---</h2>
         <ul>
-          <a href="https://www.codecademy.com/">CodeAcademy.com</a>
+          <ol><a href="https://www.codecademy.com/">CodeAcademy.com</a></ol>
             <p>Once again, CodeAcademy has a lot! You can do their HTML and CSS courses. Start here. It will get you
                familiar with all of the basics.
             </p>
