--- a/teach.html
+++ b/teach.html
@@ -98,9 +98,9 @@
           Cascading Style Sheets (CSS) is the styling of your website. Changing how your text looks,
           how your images are presented, and the colors you see. CSS can also do more.
         </p>
-      <h2>---Sites To Learn HTML & CSS---</h2>
+      <h2>Sites To Learn HTML & CSS</h2>
         <ul>
-          <ol><a href="https://www.codecademy.com/">CodeAcademy.com</a></ol>
+          <a href="https://www.codecademy.com/">CodeAcademy.com</a>
             <p>Once again, CodeAcademy has a lot! You can do their HTML and CSS courses. Start here. It will get you
                familiar with all of the basics.
             </p>
