--- a/teach.html
+++ b/teach.html
@@ -57,7 +57,7 @@
             MERN stands for Mongo DB, Express, React, and Node js. MEAN stands for Mongo DB, Express, Angular, and Node js.
             These are Javascript based Full Stacks.
           </p>
-          <h1> Start with Javascript</h1>
+          <h1>Start with Javascript</h1>
           <p> This is the absolutely most important step in your whole journey, one you will work on your entire career.
             Start with a object oriented programming language before you learn HTML and CSS. Why?
             Learning an object oriented programming language is a lot harder to learn than HTML and CSS. The sooner you get started the better. Also,
@@ -66,7 +66,7 @@
             You may hit a wall when you are first getting started, but know this: it will all make sense. It will also become
             a lot of fun. It's all about problem solving and becoming a better critical thinker. Well, where to start?
           </p>
-          <h2>-Sites To Learn Javascript-</h2>
+          <h2>Sites To Learn Javascript</h2>
             <ul>
               <a href="https://www.codecademy.com/">CodeAcademy.com</a>
                 <p>CodeAcademy has a lot! You can do the free version or pay if you want help. I've done both.
@@ -80,26 +80,25 @@
                     to make it into the program if you haven't solidified your skills on CodeAcademy.
                   </p>
             </ul>
-          <h2>-Learn Higher Order Functions-</h2>
+          <h2>Learn Higher Order Functions</h2>
             <a href="https://medium.com/humans-create-software/a-dirt-simple-introduction-to-higher-order-functions-in-javascript-b33bf9e19056">Intro to HOFs</a>
             <p> A HOF is a function that accepts another function as an arguement. Fancy For Loops that do wondeful
               things for you. Learn them and love them. Also, the guy in the above article has a wonderful youtube
               channel that is great for learning about JS in all of it's glory.
             </p>
-            <h2>-Learn Recursion-</h2>
-              <a href="https://www.cs.umd.edu/class/fall2002/cmsc214/Tutorial/recursion.html">Intro to Recursion</a>
-              <p> Recursion is a rabbit hole you want to go down. It's a function that calls itself until it solves
-                a problem by solving parts of a problem, one at a time. You need a base case and then a recursive call.
-                Read the above article to start down the path of recursion.
-              </p>
+          <h2>Learn Recursion</h2>
+            <a href="https://www.cs.umd.edu/class/fall2002/cmsc214/Tutorial/recursion.html">Intro to Recursion</a>
+            <p> Recursion is a rabbit hole you want to go down. It's a function that calls itself until it solves
+              a problem by solving parts of a problem, one at a time. You need a base case and then a recursive call.
+              Read the above article to start down the path of recursion.
+            </p>
       <h1>HTML & CSS</h1>
-        <p> Hyper Text Markup Language (HTML) is like the bones, the physical framework for your website. It's the
-          text you are reading right now and how it is arranged. It's how your whole website is arranged.
-          Cascading Style Sheets (CSS) is the styling of your website. Changing how your text looks,
-          how your images are presented, and the colors you see. CSS can also do more.
-        </p>
+         <p> Hyper Text Markup Language (HTML) is like the bones, the physical framework for your website. It's the
+           text you are reading right now and how it is arranged. It's how your whole website is arranged.
+           Cascading Style Sheets (CSS) is the styling of your website. Changing how your text looks,
+           how your images are presented, and the colors you see. CSS can also do more.
+         </p>
       <h2>Sites To Learn HTML & CSS</h2>
-        <ul>
           <a href="https://www.codecademy.com/">CodeAcademy.com</a>
             <p>Once again, CodeAcademy has a lot! You can do their HTML and CSS courses. Start here. It will get you
                familiar with all of the basics.
@@ -113,7 +112,6 @@
             <p>This is an advanced and extremely thorough run through on how to build an even more elegant website with HTML and
                CSS, but adding jQuery and more. Extended from the previous example.
             </p>
-        </ul>
       <h1>jQuery</h1>
         <a href="https://www.codecademy.com/">CodeAcademy.com</a>
           <p>You've got it, CodeAcademy! They have a great jQuery series. I've done other sites jQuery series, like
