--- a/teach.html
+++ b/teach.html
@@ -113,15 +113,33 @@
                CSS, but adding jQuery and more. Extended from the previous example.
             </p>
       <h1>jQuery</h1>
+        <p>jQuery is a javascript library. It helps bring your website alive, adding animation and interactivity to
+           your website. It listens for events, like when you click on a button or push down a key, then it triggers
+           an action! Not to get too in depth, just try the link below and take your JS to a whole new level!
+        </p>
         <a href="https://www.codecademy.com/">CodeAcademy.com</a>
           <p>You've got it, CodeAcademy! They have a great jQuery series. I've done other sites jQuery series, like
              codeschool.com, but they were hard to follow for me. Not as clear. CodeAcademy does a great job.
           </p>
-      <h1>MEAN/MERN and more</h1>
+      <h1>MEAN/MERN</h1>
+        <p>A full tech stack that is everything you need to develop full web apps. There are two versions, because you
+          can use either Angular or React for a front end framework. Typically you would only use Angular or React for
+          large web apps, but start learning Angular or React after you've learned everything else listed on this page.
+        </p>
         <a href="http://info-mongodb-com.s3.amazonaws.com/_com_assets/collateral/modern_app_stack_ebook_rgb.pdf">Complete Guide To MEAN/MERN</a>
-          <p>This is an extremely thorough run through on the full MEAN/MERN tech stack. Pretty self explanatory. Great place to start.
+          <p>This is an extremely thorough run through on the full MEAN/MERN tech stack. Pretty self explanatory.
+             Great place to start.
           </p>
       <h1>Node js</h1>
+          <p> "Node.js® is a JavaScript runtime built on Chrome's V8 JavaScript engine. Node.js uses an event-driven,
+            non-blocking I/O model that makes it lightweight and efficient. Node.js' package ecosystem, npm, is the
+            largest ecosystem of open source libraries in the world." - <a href="https://nodejs.org/en/">Nodejs.org</a>
+          </p>
+          <p>Node js is a server side technology. It's part of the back end of your web app. It is what talks between
+            the front end and your back end database (Mongo DB).
+          </p>
+      <h1>Express</h1>
+        <a href="https://expressjs.com/">Express Website</a>
           <p>
 
           </p>
@@ -130,10 +148,6 @@
 
           </p>
       <h1>Mongoose</h1>
-          <p>
-
-          </p>
-      <h1>Express</h1>
           <p>
 
           </p>
