--- a/teach.html
+++ b/teach.html
@@ -138,6 +138,16 @@
           <p>Node js is a server side technology. It's part of the back end of your web app. It is what talks between
             the front end and your back end database (Mongo DB).
           </p>
+          <a href="https://courses.edx.org">edx.org</a>
+            <p>Edx has a lot of courses, mostly free. You can pay if you want certificates. They have courses on
+              every part of a full stack. They just use sql instead of mongo db for their database. Both are great.
+              They have a node js course you can take for free.
+            </p>
+          <a href="https://www.w3schools.com/nodejs/nodejs_intro.asp">w3schools.com</a>
+            <p> w3schools.com Is an exhaustive source for all things web. I constantly use them for quick CSS and
+              HTML hints. This link brings you to their node course. Once again just like edx, they teach it in
+              conjuction with sql.
+            </p>
       <h1>Express</h1>
         <a href="https://expressjs.com/">Express Website</a>
           <p>
