--- a/teach.html
+++ b/teach.html
@@ -57,29 +57,64 @@
             MERN stands for Mongo DB, Express, React, and Node js. MEAN stands for Mongo DB, Express, Angular, and Node js.
             These are Javascript based Full Stacks.
           </p>
+          <h1>Learn How To Work From A Command Line Interface/Linux or Unix based</h1>
+            <a href="https://www.codecademy.com/catalog/language/bash">Linux/CLI</a>
+            <p> You need to learn how to navigate your computer from a terminal. Using a Mac or Linux based OS provides
+                you with a terminal, typically a BASH terminal. Creating files, directories, running a node server, installing
+                everything you need for an app; all of this is done from a command line. Learn it, love it, use it.
+            </p>
+          <h1>Learn GIT</h1>
+            <a href="https://www.codecademy.com/catalog/language/bash">GIT</a>
+              <p> Learn GIT, by extension learn how to use github. This is where you store your projects. This is where companies
+                store their projects. Git is a version control system for tracking changes in computer files, for coordinating work
+                on those files with multiple people or for yourself.
+              </p>
+            <a href="https://github.com/">github.com</a>
+              <p> This is the most prominent git repository. This is where you store your projects. This is where
+                companies store their projects. This is where you can get ruby gems to use, where you can get premade
+                MERN stack or MEAN stack templates. A place for companies look at your code to see what you are doing.
+              </p>
+          <h1>Pick a Text Editor</h1>
+            <p>Either will work great. A text editor is for writing code, for creating your web apps. They both also
+            allow you to run code in a console, to see if your code works or to see if there are errors.</p>
+            <a href="https://www.sublimetext.com/">Sublime Text Editor</a>
+              <p>
+              </p>
+            <a href="https://atom.io/">Atom Text Editor</a>
+              <p>
+              </p>
+          <h1>Using Google Chrome Dev Tools</h1>
+            <a href="https://developer.chrome.com/devtools">Chrome Dev Tools</a>
+              <p>This is a link to learn how to use Chrome Dev Tools. You can open it on any website displayed on your
+                 browser (Google Chrome Only). It allows you to have a console for testing code, to see errors, to examine
+                 your HTML and CSS, to see what other websites code looks like. You will use it often.
+              </p>
           <h1>Start with Javascript</h1>
-          <p> This is the absolutely most important step in your whole journey, one you will work on your entire career.
-            Start with a object oriented programming language before you learn HTML and CSS. Why?
-            Learning an object oriented programming language is a lot harder to learn than HTML and CSS. The sooner you get started the better. Also,
-            once you learn a OOP language, it's a lot easier to learn other OOP languages because a lot of them are the exact
-            same concepts, just done differently with different syntax. Coding is hard, it's not easy. Spend one to two hours every day learning.
-            You may hit a wall when you are first getting started, but know this: it will all make sense. It will also become
-            a lot of fun. It's all about problem solving and becoming a better critical thinker. Well, where to start?
-          </p>
+            <p> This is the absolutely most important step in your whole journey, one you will work on your entire career.
+              Start with a object oriented programming language before you learn HTML and CSS. Why?
+              Learning an object oriented programming language is a lot harder to learn than HTML and CSS. The sooner you get started the better. Also,
+              once you learn a OOP language, it's a lot easier to learn other OOP languages because a lot of them are the exact
+              same concepts, just done differently with different syntax. Coding is hard, it's not easy. Spend one to two hours every day learning.
+              You may hit a wall when you are first getting started, but know this: it will all make sense. It will also become
+              a lot of fun. It's all about problem solving and becoming a better critical thinker. Well, where to start?
+            </p>
           <h2>Sites To Learn Javascript</h2>
-            <ul>
               <a href="https://www.codecademy.com/">CodeAcademy.com</a>
                 <p>CodeAcademy has a lot! You can do the free version or pay if you want help. I've done both.
                   I've used it for multiple languages, great way to get started. Just stick with Javascript.
                   After you've gotten a good handle on JS, then use it for HTML, CSS, and the Command Line. CodeAcademy is
                   the perfect way to get started. They give you a great basis to get started with.
                 </p>
-                <a href="https://www.hackreactor.com/prep-programs?utm_source=googlesearchnetwork&utm_medium=cpc&utm_campaign=P_Search_Brand_Prep">Hack Reactor Prep</a>
-                  <p>You can do the free version or pay if you want help. I've done both.
-                    This is a great way to solidify your skills and to move on to the next level. You won't be able
-                    to make it into the program if you haven't solidified your skills on CodeAcademy.
-                  </p>
-            </ul>
+              <a href="https://www.hackreactor.com/prep-programs?utm_source=googlesearchnetwork&utm_medium=cpc&utm_campaign=P_Search_Brand_Prep">Hack Reactor Prep</a>
+                <p>You can do the free version or pay if you want help. I've done both.
+                  This is a great way to solidify your skills and to move on to the next level. You won't be able
+                  to make it into the program if you haven't solidified your skills on CodeAcademy.
+                </p>
+              <a href="http://jshint.com/">jshint.com</a>
+                <p>This is a site that helps check your code to see if you are missing any of the basics. Such as
+                  commas, semicolons, and parentheses. Seems trivial, but it is crucial when you are first getting
+                  started. Always check your code if it's not running in your console/text editor.
+                </p>
           <h2>Learn Higher Order Functions</h2>
             <a href="https://medium.com/humans-create-software/a-dirt-simple-introduction-to-higher-order-functions-in-javascript-b33bf9e19056">Intro to HOFs</a>
             <p> A HOF is a function that accepts another function as an arguement. Fancy For Loops that do wondeful
@@ -128,7 +163,7 @@
         </p>
         <a href="http://info-mongodb-com.s3.amazonaws.com/_com_assets/collateral/modern_app_stack_ebook_rgb.pdf">Complete Guide To MEAN/MERN</a>
           <p>This is an extremely thorough run through on the full MEAN/MERN tech stack. Pretty self explanatory.
-             Great place to start.
+             Great place to start. This will help you get a sense of how all of the technologies listed below work together.
           </p>
       <h1>Node js</h1>
           <p> "Node.js® is a JavaScript runtime built on Chrome's V8 JavaScript engine. Node.js uses an event-driven,
@@ -162,12 +197,16 @@
 
           </p>
       <h1>Angular 2.0</h1>
-          <p>
-
+        <a href="https://courses.edx.org">edx.org</a>
+          <p>Edx has a lot of courses, mostly free. You can pay if you want certificates. They have courses on
+            every part of a full stack. They just use sql instead of mongo db for their database. Both are great.
+            They have a node js course you can take for free.
           </p>
       <h1>React</h1>
-          <p>
-
+        <a href="https://courses.edx.org">edx.org</a>
+          <p>Edx has a lot of courses, mostly free. You can pay if you want certificates. They have courses on
+            every part of a full stack. They just use sql instead of mongo db for their database. Both are great.
+            They have a node js course you can take for free.
           </p>
       </div>
       <h1 class="work">This Page Is A Work In Progress</h1>
