--- a/teach.html
+++ b/teach.html
@@ -47,6 +47,16 @@
           I am passing on my knowledge. You can use this knowledge to completely
           teach yourself or you can use this path to establish a working knowledge of javascript to enter
           into a bootcamp.</p>
+          <h2>Everything You Need For Your Journey</h2>
+          <ol>
+            <li>Computer. Hopefully A Mac Or A Linux Machine</li>
+            <li>Text Editor</li>
+            <li>Github Account</li>
+            <li>Terminal/CLI</li>
+            <li>Google Chrome/Chrome Dev Tools</li>
+            <li>Heroku</li>
+            <li>Jshint</li>
+          </ol>
           <h1> Different Tech Stacks</h1>
           <p> There are a lot of different Tech Stacks. A Tech Stack is a full stack of web technologies
             you use to build a web app, divided into Front End and Back End. Front End is what you see, Back End
