--- a/teach.html
+++ b/teach.html
@@ -64,8 +64,8 @@
             same thing as building an IOS app or Android app. Each of those are their own careers in tech.
             The two tech stacks that I am experienced with are Ruby on Rails and the MERN/MEAN tech stacks. Yes there are others,
             but focus on one, then you can learn any other. For now, we are going to focus on the MEAN/MERN stack.
-            MERN stands for Mongo DB, Express, React, and Node js. MEAN stands for Mongo DB, Express, Angular, and Node js.
-            These are Javascript based Full Stacks.
+            MERN stands for MongoDB, Express, React, and Node js. MEAN stands for Mongo DB, Express, Angular, and Node js.
+            These are Javascript based Full Stacks. You will be using the MVC architechtural paradigm: Model-View-Controller.
           </p>
           <h1>Learn How To Work From A Command Line Interface/Linux or Unix based</h1>
             <a href="https://www.codecademy.com/catalog/language/bash">Linux/CLI</a>
@@ -88,10 +88,11 @@
             <p>Either will work great. A text editor is for writing code, for creating your web apps. They both also
             allow you to run code in a console, to see if your code works or to see if there are errors.</p>
             <a href="https://www.sublimetext.com/">Sublime Text Editor</a>
-              <p>
+              <p> I love the console I have set up in sublime. Great for running code really quickly.
               </p>
             <a href="https://atom.io/">Atom Text Editor</a>
-              <p>
+              <p> Atom has a lot of really cool add on features. Love and hate it's auto completion.
+                Can't go wrong with atom.
               </p>
           <h1>Using Google Chrome Dev Tools</h1>
             <a href="https://developer.chrome.com/devtools">Chrome Dev Tools</a>
@@ -195,13 +196,19 @@
             </p>
       <h1>Express</h1>
         <a href="https://expressjs.com/">Express Website</a>
-          <p>
-
+          <p>"Express is a minimal and flexible Node.js web application framework that provides a robust
+             set of features for web and mobile applications." - Expressjs.com
           </p>
-      <h1>Mongo DB</h1>
-          <p>
-
+        <a href="https://developer.mozilla.org/en-US/docs/Learn/Server-side/Express_Nodejs">Mozilla's Docs on Express</a>
+          <p> It's the backend part of the stack. The above tutorial will help you work through your first express app.
+              More importanly Mozilla Docs has documentation on everything Javascript. Bookmark that site.
           </p>
+        <a href="https://www.npmjs.com/package/ejs">EJS</a>
+          <p> Templating engine given to you by Express, Embedded JavaScript. Allows you to run javascript in your HTML.
+          </p>
+      <h1>MongoDB</h1>
+        <a href="https://docs.mongodb.com/manual/tutorial/">MongoDB Tutorial</a>
+          <p>A NoSQL database program. Uses JSON-like documents with schemas. Very popular right now.</p>
       <h1>Mongoose</h1>
           <p>
 
