--- a/teach.html
+++ b/teach.html
@@ -216,14 +216,12 @@
       <h1>Angular 2.0</h1>
         <a href="https://courses.edx.org">edx.org</a>
           <p>Edx has a lot of courses, mostly free. You can pay if you want certificates. They have courses on
-            every part of a full stack. They just use sql instead of mongo db for their database. Both are great.
-            They have a node js course you can take for free.
+            every part of a full stack.
           </p>
       <h1>React</h1>
         <a href="https://courses.edx.org">edx.org</a>
           <p>Edx has a lot of courses, mostly free. You can pay if you want certificates. They have courses on
-            every part of a full stack. They just use sql instead of mongo db for their database. Both are great.
-            They have a node js course you can take for free.
+            every part of a full stack. 
           </p>
       </div>
       <h1 class="work">This Page Is A Work In Progress</h1>
