--- a/teach.html
+++ b/teach.html
@@ -209,9 +209,10 @@
       <h1>MongoDB</h1>
         <a href="https://docs.mongodb.com/manual/tutorial/">MongoDB Tutorial</a>
           <p>A NoSQL database program. Uses JSON-like documents with schemas. Very popular right now.</p>
-      <h1>Mongoose</h1>
-          <p>
-
+      <h1>Mongoose</h1>http://mongoosejs.com/
+        <a href="http://mongoosejs.com/">Mongoose JS</a>
+          <p> Mongoose is an ORM (Object Relational Mapping)for Mongo, written in node.js. You will use this site religiously at first. It's docs are what you need to work that
+            Mongo database.
           </p>
       <h1>Angular 2.0</h1>
         <a href="https://courses.edx.org">edx.org</a>
@@ -221,7 +222,7 @@
       <h1>React</h1>
         <a href="https://courses.edx.org">edx.org</a>
           <p>Edx has a lot of courses, mostly free. You can pay if you want certificates. They have courses on
-            every part of a full stack. 
+            every part of a full stack.
           </p>
       </div>
       <h1 class="work">This Page Is A Work In Progress</h1>
