--- a/teach.html
+++ b/teach.html
@@ -200,7 +200,7 @@
              set of features for web and mobile applications." - Expressjs.com
           </p>
         <a href="https://developer.mozilla.org/en-US/docs/Learn/Server-side/Express_Nodejs">Mozilla's Docs on Express</a>
-          <p> It's the backend part of the stack. The above tutorial will help you work through your first express app.
+          <p> Express is the backend part of the stack. The above tutorial will help you work through your first express app.
               More importanly Mozilla Docs has documentation on everything Javascript. Bookmark that site.
           </p>
         <a href="https://www.npmjs.com/package/ejs">EJS</a>
@@ -215,11 +215,17 @@
             Mongo database.
           </p>
       <h1>Angular 2.0</h1>
+        <a href="https://angular.io/">Angular.io</a>
+          <p>
+          </p>
         <a href="https://courses.edx.org">edx.org</a>
           <p>Edx has a lot of courses, mostly free. You can pay if you want certificates. They have courses on
             every part of a full stack.
           </p>
       <h1>React</h1>
+        <a href="https://reactjs.org/">Reactjs.org</a>
+          <p>
+          </p>
         <a href="https://courses.edx.org">edx.org</a>
           <p>Edx has a lot of courses, mostly free. You can pay if you want certificates. They have courses on
             every part of a full stack.
