--- a/teach.html
+++ b/teach.html
@@ -216,19 +216,18 @@
           </p>
       <h1>Angular 2.0</h1>
         <a href="https://angular.io/">Angular.io</a>
-          <p>
+          <p> A front end framework, popular with Google. This is the official site with docs.
           </p>
         <a href="https://courses.edx.org">edx.org</a>
-          <p>Edx has a lot of courses, mostly free. You can pay if you want certificates. They have courses on
-            every part of a full stack.
+          <p>Edx has angular courses. Get it.
           </p>
       <h1>React</h1>
         <a href="https://reactjs.org/">Reactjs.org</a>
-          <p>
+          <p> A front end framework created by facebook. This site has tutorials to get going and all the docs
+            you need.
           </p>
         <a href="https://courses.edx.org">edx.org</a>
-          <p>Edx has a lot of courses, mostly free. You can pay if you want certificates. They have courses on
-            every part of a full stack.
+          <p>Edx has a some courses on React to get you going.
           </p>
       </div>
       <h1 class="work">This Page Is A Work In Progress</h1>
