--- a/teach.html
+++ b/teach.html
@@ -214,19 +214,26 @@
           <p> Mongoose is an ORM (Object Relational Mapping)for Mongo, written in node.js. You will use this site religiously at first. It's docs are what you need to work that
             Mongo database.
           </p>
-      <h1>Angular 2.0</h1>
+      <h1>Angular 2.0 (and above)</h1>
         <a href="https://angular.io/">Angular.io</a>
-          <p> A front end framework, popular with Google. This is the official site with docs.
+          <p> A front end framework, popular with Google. Angular uses Typescript. This is the official site with docs.
+              Stick with Angular 2.0 and above. Most companies are using Angular 2.0.
+          </p>
+        <a href="https://www.codecademy.com/learn/learn-angularjs">CodeAcademy</a>
+          <p> Pretty good tutorials to get you started using Angular.
           </p>
         <a href="https://courses.edx.org">edx.org</a>
           <p>Edx has angular courses. Get it.
           </p>
       <h1>React</h1>
         <a href="https://reactjs.org/">Reactjs.org</a>
-          <p> A front end framework created by facebook. This site has tutorials to get going and all the docs
-            you need.
+          <p> A front end framework created by facebook. React is all about components, making the front end act like magic.
+            This site has tutorials to get going and all the docs you need.
           </p>
-        <a href="https://courses.edx.org">edx.org</a>
+        <a href="https://www.codecademy.com/learn/react-101">CodeAcademy</a>
+          <p> Pretty good tutorials to get you started using React.
+          </p>
+        <a href="https://courses.edx.org">edx.org</a>https://www.codecademy.com/learn/react-101
           <p>Edx has a some courses on React to get you going.
           </p>
       </div>
