--- a/teach.html
+++ b/teach.html
@@ -233,7 +233,7 @@
         <a href="https://www.codecademy.com/learn/react-101">CodeAcademy</a>
           <p> Pretty good tutorials to get you started using React.
           </p>
-        <a href="https://courses.edx.org">edx.org</a>https://www.codecademy.com/learn/react-101
+        <a href="https://courses.edx.org">edx.org</a>
           <p>Edx has a some courses on React to get you going.
           </p>
       </div>
