--- a/teach.html
+++ b/teach.html
@@ -217,7 +217,7 @@
       <h1>Angular 2.0 (and above)</h1>
         <a href="https://angular.io/">Angular.io</a>
           <p> A front end framework, popular with Google. Angular uses Typescript. This is the official site with docs.
-              Stick with Angular 2.0 and above. Most companies are using Angular 2.0.
+              Stick with Angular 2.0 and above. Most companies are using Angular 2.0. Angular is the View in your MVC.
           </p>
         <a href="https://www.codecademy.com/learn/learn-angularjs">CodeAcademy</a>
           <p> Pretty good tutorials to get you started using Angular.
@@ -228,7 +228,7 @@
       <h1>React</h1>
         <a href="https://reactjs.org/">Reactjs.org</a>
           <p> A front end framework created by facebook. React is all about components, making the front end act like magic.
-            This site has tutorials to get going and all the docs you need.
+            This site has tutorials to get going and all the docs you need. React is the View in your MVC.
           </p>
         <a href="https://www.codecademy.com/learn/react-101">CodeAcademy</a>
           <p> Pretty good tutorials to get you started using React.
