--- a/teach.html
+++ b/teach.html
@@ -34,7 +34,7 @@
     <h2>Become A Full Stack Web Developer</h2>
     <p>There are a lot of careers in the world of tech, but this is a career
     where you infuse tech and creativity. People can see what you've created and
-    you can chelp change their lives for the better.</p>
+    you can help change their lives for the better.</p>
   </section>
 
   <section class="row">
