--- a/teach.html
+++ b/teach.html
@@ -128,7 +128,7 @@
                 </p>
           <h2>Learn Higher Order Functions</h2>
             <a href="https://medium.com/humans-create-software/a-dirt-simple-introduction-to-higher-order-functions-in-javascript-b33bf9e19056">Intro to HOFs</a>
-            <p> A HOF is a function that accepts another function as an arguement. Fancy For Loops that do wondeful
+            <p> A HOF is a function that accepts another function as an argument. Fancy For Loops that do wondeful
               things for you. Learn them and love them. Also, the guy in the above article has a wonderful youtube
               channel that is great for learning about JS in all of it's glory.
             </p>
